--- a/liver/templates/game_screen.html
+++ b/liver/templates/game_screen.html
@@ -12,7 +12,7 @@
 		<button class="btn btn-main center" id="mainButton">HANDSAPP</button>
 	</div>
 </div>
-<div>
+<div id="footemail">
 	<a href="mailto:info@handsapp.fun" target="_top" class="footer">info@handsapp.fun</a>
 </div>
 	<script>
@@ -57,6 +57,7 @@
 				let data = JSON.parse(d.data);
 				let newHTML;
 				if (data.message === 'question' && data.status === 'player') {
+					document.getElementById("footemail").style.visibility = "hidden";
 					newHTML = `
 						<p class="simple-text">${data.questionNumber} / ${data.questionCount}</p>
 						<h2 class="header">${data.questionText}</h2>
@@ -78,6 +79,7 @@
 					newHTML += "</div>";
 					stabilizer.innerHTML = newHTML;
 				} else if (data.message === 'results') {
+					document.getElementById("footemail").style.visibility = "visible";
 					newHTML = `<h2 class="header">Вы ответили правильно на ${data.correctAnswersCount} вопросов из ${data.questionCount}!</h2>
 						<img class="hands-low" src="./hands.svg" />
 						<div class="center">
