--- a/liver/templates/watcher_voterka.html
+++ b/liver/templates/watcher_voterka.html
@@ -55,7 +55,7 @@
 		<h2 class="header">{{questionText}}</h2>
 		<div class="stab"><div class="bottom" id="main">
 		{% for i in range %}
-		<button class="btn btn1 answer" onclick="this.classList.add('chosen');sendAnswer(parseInt('{{ids.i}}'), parseInt('{{question_id}}'))">{{answers.i}}</button>
+		<button class="btn btn1 answer" disabled>{{answers.i}}</button>
 		{% endfor %}
 		</div></div>
 		{% else %}
@@ -63,25 +63,5 @@
 		{% endif %}
 	</div>
 </div>
-	<script>
-			function sendAnswer(ind, question_id) {
-				$.ajax({
-					'url': '/api/vote',
-					'type': 'GET',
-					'data': {
-						'question_id':question_id,
-						'answer_id': ind
-					},
-					'success': (data) => {
-						let elems = document.getElementsByClassName("answer");
-				[...elems].forEach((elem) => {
-					elem.disabled = true;
-				});
-					}
-				});
-			}
-		
-		</script>
-		<script src='{% static "jquery-3.1.0.min.js" %}'></script>
 </body>
 </html>
