--- a/liver/templates/watcher_voterka.html
+++ b/liver/templates/watcher_voterka.html
@@ -54,7 +54,7 @@
 		<h2 class="header">{{questionText}}</h2>
 		<div class="center" id="main">
 		<div class="stab"><div class="bottom" id="main">
-		{% for key, value in answers %}
+		{% for value in answers %}
 		<button class="btn btn1 answer" disabled>{{value}}</button>
 		{% endfor %}
 		</div></div>
