--- a/liver/templates/watcher_voterka.html
+++ b/liver/templates/watcher_voterka.html
@@ -52,7 +52,7 @@
 	<div id="gamezone">
 		{% if is_started %}
 		<h2 class="header">{{questionText}}</h2>
-		<div class="center" id="main">
+		<div class="center" id="main" style="top:95%">
 		<div class="stab"><div class="bottom" id="main">
 		{% for value in answers %}
 		<button class="btn btn1 answer" disabled>{{value}}</button>
