--- a/liver/templates/voterka.html
+++ b/liver/templates/voterka.html
@@ -53,7 +53,7 @@
 
 		{% if is_started %}
 		<h2 class="header">{{questionText}}</h2>
-		<div class="center" id="main">
+		<div class="center" id="main" style="top:95%">
 		<div class="stab"><div class="bottom" id="main">
 		{% for i in range %}
 		{{ids.i}} {{answers.i}}
