--- a/liver/templates/voterka.html
+++ b/liver/templates/voterka.html
@@ -55,9 +55,8 @@
 		<h2 class="header">{{questionText}}</h2>
 		<div class="center" id="main" style="top:95%">
 		<div class="stab"><div class="bottom" id="main">
-		{% for i in range %}
-		{{ids.i}} {{answers.i}}
-		<button class="btn btn1 answer" id="a_{{i}}" onclick="this.classList.add('chosen');sendAnswer(parseInt('{{ids.i}}'), parseInt('{{question_id}}'))">{{answers.i}}</button>
+		{% for id, answer in answer.items %}
+		<button class="btn btn1 answer" id="a_{{i}}" onclick="this.classList.add('chosen');sendAnswer(parseInt('{{id}}'), parseInt('{{question_id}}'))">{{answer}}</button>
 		{% endfor %}
 		</div></div>
 	</div>
