--- a/liver/templates/master_voterka.html
+++ b/liver/templates/master_voterka.html
@@ -51,6 +51,7 @@
 <body class="voter">
 	<div class="center">
         <form action="" method="post">
+				{% csrf_token %}
         <input class="btn btn2" type="submit" value="Остановить">
     </form>
 </div>
