--- a/liver/templates/game_screen.html
+++ b/liver/templates/game_screen.html
@@ -105,7 +105,7 @@
 						<h2 class="header">${data.questionText}</h2>
 						<div class="stab"><div class="bottom" id="main">`;
 					data.answers.forEach((answer, index) => {
-						newHTML += `<button class="btn btn1 answer" onclick="this.classList.add('chosen');sendAnswer(${data.ids[index]}, ${data.question_id})">${answer}</button>`;
+						newHTML += `<button class="btn btn1" onclick="this.classList.add('chosen');sendAnswer(${data.ids[index]}, ${data.question_id})"><span class="answer">${answer}</span></button>`;
 					});
 					newHTML += "</div></div>";
 					gamezone.innerHTML = newHTML;
