--- a/liver/templates/watcher.html
+++ b/liver/templates/watcher.html
@@ -105,7 +105,7 @@
                     <h2 class="header">${data.questionText}</h2>
                     <div class="stab"><div class="bottom" id="main">`;
                 data.answers.forEach((answer, index) => {
-                    newHTML += `<button class="btn btn1 answer" disabled>${answer}</button>`;
+                    newHTML += `<button class="btn btn1" disabled><span class="answer">${answer}</span></button>`;
                 });
                 newHTML += "</div></div>";
                 gamezone.innerHTML = newHTML;
