--- a/liver/templates/game_screen.html
+++ b/liver/templates/game_screen.html
@@ -50,22 +50,47 @@
 </head>
 <body class="hands">
 	<div id="gamezone">
-	<div class="center" id="main">
-		<button class="btn btn-main center" id="mainButton">HANDSAPP</button>
+		<div class="center" id="main">
+			<button class="btn btn-main center" id="mainButton">HANDSAPP</button>
+		</div>
 	</div>
-</div>
-<div id="footemail">
-	<a href="mailto:info@handsapp.fun" target="_top" class="footer">info@handsapp.fun</a>
-</div>
+	<div id="footemail">
+		<a href="mailto:info@handsapp.fun" target="_top" class="footer">info@handsapp.fun</a>
+	</div>
+	<h2 id="timer"></h2>
 	<script>
 			let main = document.getElementById('main');
 			let gamezone = document.getElementById('gamezone');
 			let name, code, xhr, question_id;
 			var people_count=1;
 			let roomName, chatSocket;
+			let currentTime = 30;
+			let timerInterval = null;
+			let spent = 0;
+			let hiddenInterval = null;
+
+			function timer() {
+				document.getElementById("timer").innerHTML = currentTime;
+				currentTime -= 1;
+				if (currentTime === -1) {
+					clear(true);
+				}
+			}
+
+			function hiddenTimer() {
+				spent += 1;
+			}
+
+			function clear(keep_number) {
+				if (!keep_number) {
+        			document.getElementById("timer").innerHTML = "";
+				}
+        		clearInterval(timerInterval);
+    		}
 		
 			function sendAnswer(ind, question_id) {
-				chatSocket.send(JSON.stringify({message: "answer", name: name, answer: ind, question_id: question_id}));
+				clear(true);
+				chatSocket.send(JSON.stringify({message: "answer", name: name, answer: ind, question_id: question_id, time: spent}));
 				let elems = document.getElementsByClassName("btn1");
 				[...elems].forEach((elem) => {
 					elem.disabled = true;
@@ -98,6 +123,13 @@
 			function processMessage(d) {
 				let data = JSON.parse(d.data);
 				let newHTML;
+				if (data.message === 'question') {
+					currentTime = 30;
+					timerInterval = setInterval(timer, 1000);
+					spent = 0;
+				} else {
+					clear();
+				}
 				if (data.message === 'question' && data.status === 'player') {
 					document.getElementById("footemail").style.visibility = "hidden";
 					newHTML = `
