--- a/liver/templates/quiz_master.html
+++ b/liver/templates/quiz_master.html
@@ -67,6 +67,18 @@
     var chatSocket = new WebSocket(
         'wss://' + window.location.host +
         '/ws/quiz/' + roomName + '/');
+    let currentTime = 30;
+    let timerInterval = null;
+
+    function timer() {
+        document.getElementById("timer").innerHTML = currentTime;
+        currentTime -= 1;
+    }
+
+    function clear() {
+        document.getElementById("timer").innerHTML = "";
+        clearInterval(timerInterval);
+    }
 
     function login() {
         let login = document.getElementById("loginInput").value;
@@ -81,7 +93,7 @@
         }
         document.body.innerHTML = `<div class="center"><button class="btn btn2" id="question">Следующий вопрос</button>
             <button class="btn btn4" id="question-results">Остановить</button>
-            <button class="btn btn2" id="user_score">Показать результаты</button></div>`;
+            <button class="btn btn2" id="user_score">Показать результаты</button></div><h2 id="timer"></h2>`;
         document.querySelector("#question-results").classList.add("disabled");
         document.querySelector("#user_score").classList.add("disabled");
         document.querySelector("#question-results").disabled = true;
@@ -100,8 +112,11 @@
             document.querySelector("#question-results").classList.remove("disabled");
             document.querySelector("#question").disabled = true;
             document.querySelector("#question-results").disabled = false;
+            currentTime = 30;
+            timerInterval = setInterval(timer, 1000);
         };
         document.querySelector('#question-results').onclick = function(e) {
+            clear();
             chatSocket.send(JSON.stringify({
                 'message': 'question_results'
             }));
