--- a/static_temp/style.css
+++ b/static_temp/style.css
@@ -391,3 +391,12 @@ body.voter {
 		right: 1.5vw;
 	}
 }
+
+#timer {
+	position: absolute;
+	top: 0;
+	right: 0;
+	padding-right: 50px;
+	font-size: 50px;
+	color: #ffffff;
+}
