--- a/liver/templates/game_screen.html
+++ b/liver/templates/game_screen.html
@@ -64,7 +64,7 @@
 			let name, code, xhr, question_id;
 			var people_count=1;
 			let roomName, chatSocket;
-			let currentTime = 15;
+			let currentTime = {{quiz.question_time}};
 			let timerInterval = null;
 			let spent = 0;
 			let hiddenInterval = null;
