--- a/static_temp/style.css
+++ b/static_temp/style.css
@@ -21,11 +21,233 @@ body.voter {
 	background-color: #000000;
 }
 
+.editor-question {
+	position: relative;
+	border-radius: 3vw;
+	border: #ffffff solid 5px;
+	background-image: url("./plus.png");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 10%;
+	text-align: center;
+	width: 100%;
+	height: 25vh;
+	margin-bottom: 8vh;
+}
+
+.editor-question p {
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 600;
+	position: absolute;
+	color: #ffffff;
+	font-size: 30px;
+	bottom: 0;
+	width: 100%;
+}
+
+.editor-answer p {
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 600;
+	color: #ffffff;
+	font-size: 30px;
+	line-height: 10vh;
+	margin: 0;
+	margin-left: 20%;
+	width: 75%;
+}
+
+.editor-answer {
+	position: relative;
+	border-radius: 1vw;
+	border: #ffffff solid 5px;
+	background-image: url("./plus.png");
+	background-repeat: no-repeat;
+	background-position: 5vw center;
+	background-size: 8%;
+	width: 100%;
+	height: 10vh;
+	margin: 1vh 0;
+}
+
+.head-overlap {
+	position: fixed;
+	top: 0;
+	width: 100vw;
+	height: 5vh;
+	text-align: center;
+	line-height: 5vh;
+	font-size: 2vh;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 600;
+}
+
+.foot-overlap {
+	position: fixed;
+	bottom: 0;
+	width: 100vw;
+	height: 10vh;
+}
+
+.overlap-color-dark {
+	background-color: #9045E1;
+	color: #ffffff;
+}
+
+.overlap-color-light {
+	background-color: #ffffff;
+	color: #7137B0;
+}
+
 .center {
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+}
+
+.center-h {
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+.container {
+	margin-top: 6vh;
+	margin-bottom: 11vh;
+}
+
+.dummy {
+	height: 0;
+	padding-top: 100%;
+}
+
+.c {
+	position: absolute;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	border-radius: 10%;
+}
+
+.c p {
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 600;
+	position: absolute;
+}
+
+.c-add {
+	border-radius: 5%;
+	border: #ffffff solid 5px;
+	background-image: url("./plus.png");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 10%;
+	text-align: center;
+}
+
+.c-test {
+	background-color: #ffffff;
+	box-shadow: 0 10px 0 0 #B28BD5;
+}
+
+.c-add p {
+	bottom: 5%;
+	color: #ffffff;
+	font-size: 30px;
+	width: 100%;
+}
+
+.c-test p {
+	color: #6D449A;
+	left: 5%;
+	top: 5%;
+	font-size: 30px;
+	max-width: 80%;
+}
+
+.back {
+	position: absolute;
+	background-color: transparent;
+	border: none;
+	background-image: url("./arrow_violet.png");
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 100%;
+	width: 5vw;
+	transform: rotate(180deg);
+	left: 5vw;
+}
+
+.download {
+	position: absolute;
+	background-color: transparent;
+	border:none;
+	height: 100%;
+	width: 5vw;
+	right: 5vw;
+	background-size: 200%;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-image: url("./download.png");
+}
+
+.eye {
+	position: absolute;
+	background-color: transparent;
+	border:none;
+	height: 100%;
+	width: 10vw;
+	left: 5vw;
+	background-size: 150%;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-image: url("./eye.png");
+}
+
+.trash {
+	position: absolute;
+	background-color: transparent;
+	border:none;
+	height: 100%;
+	width: 5vw;
+	right: 5vw;
+	background-size: 150%;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-image: url("./trash.png");
+}
+
+.btn-round {
+	position: absolute;
+	border: none;
+	border-radius: 50%;
+	width: 15vw;
+	height: 15vw;
+	bottom: 10vw;
+	left: 50%;
+	transform: translateX(-50%);
+	background-color: #ffffff;
+	background-size: 50%;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-image: url("./plus_violet.png");
+	box-shadow: 0 10px 0 0 #B28BD5;
+}
+
+.delete-btn {
+	height: 20%;
+	width: 20%;
+	background-image: url("./trash.png");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	background-color: transparent;
+	border: none;
+	position: absolute;
+	top: 0;
+	right: 0;
 }
 
 .footer {
@@ -37,6 +259,10 @@ body.voter {
 	font-weight: 600;
 	font-size: 2vw;
 	color: white;
+}
+
+.mt {
+	top: 4em;
 }
 
 .bottom {
@@ -65,6 +291,7 @@ body.voter {
 	color: #ffffff;
 	font-size: 4vw;
 	font-weight: 700;
+	box-shadow: 0 10px 0 0 #B828BA;
 }
 
 .btn1 {
@@ -115,13 +342,17 @@ body.voter {
 	background-color: #9B009D;
 }
 
-.input-holder {
+.input-holder, .input-holder-full {
 	background-color: #9045E1;
 	box-shadow: 0 10px 0 0 #6630A0;
 	height: 16vw;
 	width: 80vw;
 	border-radius: 8vw;
 	margin-bottom: 2em;
+}
+
+.input-holder, .input-holder-full, .register_btn {
+	box-sizing: content-box;
 }
 
 .input-holder input {
@@ -138,6 +369,11 @@ body.voter {
 	padding-left: 6vw;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 500;
+}
+
+.input-holder-full input {
+	width: 70vw;
+	bottom: -2vw;
 }
 
 .input-holder input:focus + button {
@@ -223,6 +459,13 @@ body.voter {
 	margin-bottom: 10px;
 }
 
+.editor-header {
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 800;
+	font-size: 6vw;
+	color: #ffffff;
+}
+
 .simple-text {
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 600;
@@ -243,7 +486,7 @@ body.voter {
 	height: 50%;
 }
 
-.row {
+.row_ {
 	width: 80vw;
 	height: 10vw;
 	border-radius: 5vw;
@@ -260,7 +503,7 @@ body.voter {
 	background-color: #D62ED8;
 }
 
-.row div {
+.row_ div {
 	display: inline-block;
 	height: 10vw;
 	line-height: 10vw;
@@ -286,6 +529,28 @@ body.voter {
 ::placeholder {
   color: #ffffff;
   opacity: 1;
+}
+
+.register_btn {
+	display: block;
+	border-radius: 5vw;
+	border: none;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 500;
+	font-size: 4vw;
+	line-height: 10vw;
+	margin-bottom: 2em;
+	width: 35vw;
+	height: 10vw;
+	background-color: #9045E1;
+	background-image: url("./arrow_white.png");
+	background-position: right 4vw center;
+	background-repeat: no-repeat;
+	background-size: auto 35%;
+	text-align: left;
+	padding-left: 8vw;
+	color: #ffffff;
+	box-shadow: 0 10px 0 0 #6630A0;
 }
 
 @media screen and (min-width: 1200px) {
@@ -350,12 +615,12 @@ body.voter {
 		line-height: 3vw;
 	}
 
-	.row {
+	.row_ {
 		width: 50vw;
 		height: 3vw;
 	}
 
-	.row div {
+	.row_ div {
 		font-size: 2vw;
 		line-height: 3vw;
 		height: 3vw;
