--- a/adminka/templates/master-questions.html
+++ b/adminka/templates/master-questions.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Настройка</title>
-		<link rel="stylesheet" href="./style.css">
-		<link rel="stylesheet" href="./bootstrap-grid.min.css">
+		<link href='{% static "style.css" %}' rel="stylesheet">
+		<link href='{% static "bootstrap-grid.min.css" %}' rel="stylesheet">
 	</head>
 	<body class="hands">
 		<div class="head-overlap overlap-color-light">
@@ -36,6 +36,6 @@
 			</div>
 		</div>
 		<button class="btn-round"></button>
-		<script src="./app.js"></script>
+		<script src='{% static "app.js" %}'></script>
 	</body>
 </html>
