--- a/adminka/templates/master-tests.html
+++ b/adminka/templates/master-tests.html
@@ -3,21 +3,23 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Настройка</title>
-		<link rel="stylesheet" href="./style.css">
-		<link rel="stylesheet" href="./bootstrap-grid.min.css">
+		<link href='{% static "style.css" %}' rel="stylesheet">
+		<link href='{% static "bootstrap-grid.min.css" %}' rel="stylesheet">
 	</head>
 	<body class="hands">
 		<div class="head-overlap overlap-color-dark">HANDSAPP</div>
 		<div class="foot-overlap overlap-color-dark"></div>
 		<div class="container">
 			<div class="row">
+				{% for quiz in quizes %}
 				<div class="col-6">
 					<div class="dummy"></div>
 					<div class="c c-test m-3">
 						<button class="delete-btn"></button>
-						<textarea>Мигрируют ли кориандры на массы туш? Мнение большинства</textarea>
+						<textarea>{{quiz.title}}</textarea>
 					</div>
 				</div>
+				{% endfor %}
 				<div class="col-6" onclick="addTest();">
 					<div class="dummy"></div>
 					<div class="c c-add m-3">
@@ -26,6 +28,6 @@
 				</div>
 			</div>
 		</div>
-		<script src="./app.js"></script>
+		<script src='{% static "app.js" %}'></script>
 	</body>
 </html>
