--- a/adminka/templates/overlay.html
+++ b/adminka/templates/overlay.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Настройка</title>
-		<link rel="stylesheet" href="./style.css">
-		<link rel="stylesheet" href="./bootstrap-grid.min.css">
+		<link href='{% static "style.css" %}' rel="stylesheet">
+		<link href='{% static "bootstrap-grid.min.css" %}' rel="stylesheet">
 	</head>
 	<body class="hands">
 		<div class="overlay"></div>
