--- a/liver/templates/quiz_master.html
+++ b/liver/templates/quiz_master.html
@@ -47,7 +47,7 @@
       <script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src="https://vk.com/js/api/openapi.js?160",t.onload=function(){VK.Retargeting.Init("VK-RTRG-335322-e3qFt"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script><noscript><img src="https://vk.com/rtrg?p=VK-RTRG-335322-e3qFt" style="position:fixed; left:-999px;" alt=""/></noscript>      
     <link href='{% static "Montserrat.css" %}' rel="stylesheet">
     <meta charset="utf-8"/>
-    <title>Game Manager Room</title>
+    <title>Master</title>
     <link href='{% static "style.css" %}' rel="stylesheet">
 </head>
 <body class="hands">
