--- a/liver/templates/leaderboard.html
+++ b/liver/templates/leaderboard.html
@@ -1,16 +1,16 @@
 <h2 class="header">Рейтинг</h2>
 <div class="center" id="main">
-	<div class="row">
+	<div class="row_">
 	</div>
 	{% for user in users %}
-	<div class="row {{user.class}}">
+	<div class="row_ {{user.class}}">
 		<div class="position">{{ user.position }}</div>
 		<div class="name">{{ user.name }}</div>
 		<div class="score">{{ user.score }}</div>
 	</div>
 	{% endfor %}
 	{% if user_personal %}
-	<div class="row user">
+	<div class="row_ user">
 			<div class="position">{{ user_personal.position }}</div>
 			<div class="name">{{ user_personal.name }}</div>
 			<div class="score">{{ user_personal.score }}</div>
