repositioned backbtn, updated leaderboard and text

--- a/liver/templates/leaderboard.html
+++ b/liver/templates/leaderboard.html
@@ -1,5 +1,5 @@
 <h2 class="header">Рейтинг</h2>
-<div class="center" id="main">
+<div class="center-h" id="main">
 	<div class="row_">
 	</div>
 	{% for user in users %}
