--- a/adminka/templates/master-tests.html
+++ b/adminka/templates/master-tests.html
@@ -14,7 +14,7 @@
 				{% for quiz in quizes %}
 				<div class="col-6">
 					<div class="dummy"></div>
-					<div class="c c-test m-3">
+					<div class="c c-test m-3" onclick="window.location.href='{{quiz.url}}';">
 						<button class="delete-btn"></button>
 						<textarea>{{quiz.title}}</textarea>
 					</div>
