--- a/adminka/templates/master-login.html
+++ b/adminka/templates/master-login.html
@@ -8,10 +8,10 @@
 	</head>
 	<body class="hands">
 		<button class="btn btn-main center-h mt" disabled>HANDSAPP</button>
-		<form action="" method="POST">
+		<form action="" method="POST" id="loginform">
 		<div class="center">
 			<div class="input-holder input-holder-full"><input type="text" id="loginInput" name="loginInput" placeholder="Логин" required/></div>
-			<div class="input-holder"><input type="password" id="passwordInput" name="passwordInput" placeholder="Пароль" required/><button type="button" id="nameFormButton"></button></div>
+			<div class="input-holder"><input type="password" id="passwordInput" name="passwordInput" placeholder="Пароль" required/><button type="button" id="nameFormButton" onclick="document.getElementById('loginform').submit();"></button></div>
 			<!-- <div class="register_btn"><span>Регистрация</span></div> -->
 		</div>
 	</form>
