--- a/liver/templates/game_screen.html
+++ b/liver/templates/game_screen.html
@@ -43,10 +43,12 @@
 		src="https://www.facebook.com/tr?id=1701043756875290&ev=PageView&noscript=1"
 	  /></noscript>
 	  <!-- End Facebook Pixel Code -->
-	  <script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src="https://vk.com/js/api/openapi.js?160",t.onload=function(){VK.Retargeting.Init("VK-RTRG-335322-e3qFt"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script><noscript><img src="https://vk.com/rtrg?p=VK-RTRG-335322-e3qFt" style="position:fixed; left:-999px;" alt=""/></noscript>	  
+	  <script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src="https://vk.com/js/api/openapi.js?160",t.onload=function(){VK.Retargeting.Init("VK-RTRG-335322-e3qFt"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script><noscript><img src="https://vk.com/rtrg?p=VK-RTRG-335322-e3qFt" style="position:fixed; left:-999px;" alt=""/></noscript>
 	<link href='{% static "Montserrat.css" %}' rel="stylesheet">
+	<link href='{% static "TT_Commons.css" %}' rel="stylesheet">
 	<title>HandsApp</title>
 	<link href='{% static "style.css" %}' rel="stylesheet">
+	<link href='{% static "vk_override.css" %}' rel="stylesheet">
 </head>
 <body class="hands">
 	<div id="gamezone">
