--- a/static_temp/TT_Commons.css
+++ b/static_temp/TT_Commons.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "TT Commons";
-    src: url("/TTCommonsRegular.ttf") format("ttf");
+    src: url("./TTCommonsRegular.ttf") format("ttf");
     font-style: normal;
     font-weight: 400;
 }
