--- a/liver/templates/leaderboard.html
+++ b/liver/templates/leaderboard.html
@@ -1,4 +1,4 @@
-<h2 class="header">Рейтинг</h2>
+<h2 class="header header-vk">Рейтинг</h2>
 <div class="center-h" id="main">
 	<div class="row_">
 	</div>
